Fix build.xml and add params to Makefile