@@ -6,9 +6,7 @@
 
   <target name="compile">
     <mkdir dir="build/classes"/>
-    <javac srcdir="src" destdir="build/classes">
-      <compilerarg line="-J-server -J-XX:+AggressiveOpts -J-XX:+TieredCompilation" />
-    </javac>
+    <javac srcdir="src" destdir="build/classes"/>
   </target>
 
 
